--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
     </div>
 
     <footer>
-      <small> ©2020. Panda Commerce. All rights reserved. Sofia, Bulgaria. </small>
+      <small> ©2022. Panda Commerce. All rights reserved. Bogura,Bangladesh. </small>
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
